# tgup

./: pyproject.toml
tests/: test_pipeline_performance.py
tgup/: __init__.py  __main__.py  config.py  models.py  pipeline.py
tgup/cli/: app.py  display.py
tgup/services/: __init__.py  duplicates.py
tgup/telegram/: __init__.py  client.py  session.py
