[project]
name = "tgup"
version = "2.0.0"
description = "Telegram media downloader and MEGA uploader"
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.34",
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
tgup = "tgup.cli.app:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"

